cabal-version: 3.0
name:          xmonad-custom
version:       0.0.1.0

executable xmonad
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints
    -Wno-missing-signatures

  main-is:            xmonad.hs
  build-depends:
    , base            >=4.13    && <4.15
    , containers      ==0.6.2.1
    , extra           ==1.7.3
    , relude          ==0.7.0.0
    , X11             ==1.9.2
    , xmonad          ==0.15
    , xmonad-contrib  ==0.16
