cabal-version: 3.0
name:          xmonad-leo
version:       0.0.1.0

executable xmonad
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints
    -Wno-missing-signatures

  main-is:            xmonad.hs
  build-depends:
    , base            ^>=4.13
    , containers      ==0.6.2.1
    , xmonad          ==0.15
    , xmonad-contrib  ==0.16
